--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ModelPropertyChecker.MainWindow"
+<Window x:Class="ModelPropertyChecker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,6 +10,10 @@
         Title="Arma Model Property Checker" Height="450" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
         >
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </Window.Resources>
 
     <Grid Margin="0,0">
         <Grid.ColumnDefinitions>
@@ -27,7 +31,30 @@
             </Grid.RowDefinitions>
 
 
-            <Button Grid.Row="0" Content="Load Models"  Height="20" Click="ButtonBase_OnClick"/>
+            <Button Grid.Row="0" Content="Load Models"  Height="20" Click="ButtonBase_OnClick" Visibility="{Binding Path=directory.IsNotLoading, Converter={StaticResource BoolToVis}}"/>
+
+            <ProgressBar Grid.Row="0" Height="20" VerticalAlignment="Top" 
+                         Visibility="{Binding Path=directory.IsLoading, Converter={StaticResource BoolToVis}}" 
+                         Minimum="0" 
+                         Maximum="{Binding directory.totalNumberOfModels}" 
+                         Value="{Binding directory.models.Count, Mode=OneWay}"
+                         IsIndeterminate="{Binding directory.isIndeterminate}"/>
+            <TextBlock
+                Visibility="{Binding Path=directory.IsLoading, Converter={StaticResource BoolToVis}}" 
+                HorizontalAlignment="Center" VerticalAlignment="Center" 
+                Grid.Row="0"
+                >
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{}{0}/{1} {0:1}%">
+                        <Binding Path="directory.models.Count" Mode="OneWay"/>
+                        <Binding Path="directory.totalNumberOfModels" Mode="OneWay"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+
+
+
+
 
             <TreeView Grid.Row="1" SelectedItemChanged="SelectionChanged"
                       ItemsSource="{Binding directory.models, PresentationTraceSources.TraceLevel=High}" 
